[tool.poetry]
name = "nano"
version = "0.1.0"
description = "Experiments where neural nets control lots of tiny things."
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
